# OpenGL2

./: CMakeLists.txt
include/glad/: glad.h
shaders/: default.frag  default.vert
src/: glad.c  main.cpp
